--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ p{
     margin-left: 5px;
 }
 
-/* @media only screen and (max-width: 375px){
+@media only screen and (max-width: 375px){
     #Top{
         padding-bottom: 10px;
     }
@@ -117,5 +117,5 @@ p{
     }
 
 
-} */
+}
     
